--- a/index.css
+++ b/index.css
@@ -17,6 +17,13 @@ main {
   height: 100%;
 }
 
+.item {
+  height: 100px;
+  width: 100px;
+  margin: 5px;
+  background-color: #FCF2EC;
+}
+
 footer {
   background-color: #DAEEEF;
   height: 80%;
