Automatically backed up by Learn

--- a/index.css
+++ b/index.css
@@ -20,6 +20,11 @@ main {
   align-items: center;
 }
 
+.setWidth {
+  flex-basis: 100px;
+  flex-grow: 1;
+}
+
 .item {
   height: 100px;
   width: 100px;
